[package]
name = "aws-wasm-checksums"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
base64 = "0.22.1"
crc32ccrate = { package="crc32c", version = "0.6.8" }
crc32fast = "1.4.2"
crc64fast-nvme = "1.1.1"
sha1 = "0.10.6"
sha2 = "0.10.8"
wit-bindgen-rt = { version = "0.39.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:aws-wasm-checksums"

[package.metadata.component.dependencies]
